--- a/QtChatProject/chatserver.ui
+++ b/QtChatProject/chatserver.ui
@@ -1,146 +1,184 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>ChatServer</class>
  <widget class="QWidget" name="ChatServer">
- <property name="geometry">
-  <rect>
-   <x>0</x>
-   <y>0</y>
-   <width>421</width>
-   <height>315</height>
-  </rect>
- </property>
- <property name="windowTitle">
-  <string>Chatting Server</string>
- </property>
- <layout class="QHBoxLayout" name="horizontalLayout_3">
-  <item>
-   <widget class="QSplitter" name="splitter">
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-    <widget class="QWidget" name="layoutWidget">
-     <layout class="QVBoxLayout" name="clientListVerticalLayout">
-      <item>
-       <widget class="QLabel" name="clientListLabel">
-        <property name="text">
-         <string>Client List</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QTreeWidget" name="clientTreeWidget">
-        <property name="selectionBehavior">
-         <enum>QAbstractItemView::SelectItems</enum>
-        </property>
-        <property name="rootIsDecorated">
-         <bool>false</bool>
-        </property>
-        <property name="headerHidden">
-         <bool>true</bool>
-        </property>
-        <column>
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>623</width>
+    <height>415</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Chatting Server</string>
+  </property>
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <widget class="QWidget" name="">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="clientListLabel">
          <property name="text">
-          <string>Status</string>
+          <string>Client List</string>
          </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Name</string>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTreeWidget" name="clientTreeWidget">
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectItems</enum>
          </property>
-        </column>
-       </widget>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout"/>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QWidget" name="layoutWidget">
-     <layout class="QVBoxLayout" name="messageVerticalLayout">
-      <item>
-       <widget class="QTreeWidget" name="messageTreeWidget">
-        <property name="rootIsDecorated">
-         <bool>false</bool>
-        </property>
-        <property name="wordWrap">
-         <bool>true</bool>
-        </property>
-        <column>
-         <property name="text">
-          <string>IP</string>
+         <property name="rootIsDecorated">
+          <bool>false</bool>
          </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Port</string>
+         <property name="headerHidden">
+          <bool>true</bool>
          </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>ID</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Name</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Message</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Time</string>
-         </property>
-        </column>
-       </widget>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="messageLayout">
-        <item>
-         <widget class="QPushButton" name="clearPushButton">
+         <column>
           <property name="text">
-           <string>Clear</string>
+           <string>Status</string>
           </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="savePushButton">
+         </column>
+         <column>
           <property name="text">
-           <string>Save</string>
+           <string>Name</string>
           </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-     </layout>
+         </column>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="chatListLabel">
+         <property name="text">
+          <string>Chat List</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTreeWidget" name="chatTreeWidget">
+         <property name="verticalScrollBarPolicy">
+          <enum>Qt::ScrollBarAsNeeded</enum>
+         </property>
+         <property name="horizontalScrollBarPolicy">
+          <enum>Qt::ScrollBarAlwaysOff</enum>
+         </property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectItems</enum>
+         </property>
+         <property name="rootIsDecorated">
+          <bool>false</bool>
+         </property>
+         <property name="headerHidden">
+          <bool>true</bool>
+         </property>
+         <column>
+          <property name="text">
+           <string>Status</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Name</string>
+          </property>
+         </column>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Chatting Log</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTreeWidget" name="messageTreeWidget">
+         <property name="rootIsDecorated">
+          <bool>false</bool>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+         <column>
+          <property name="text">
+           <string>IP</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Port</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>ID</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Name</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Message</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Time</string>
+          </property>
+         </column>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="messageLayout">
+         <item>
+          <widget class="QPushButton" name="clearPushButton">
+           <property name="text">
+            <string>Clear</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="savePushButton">
+           <property name="text">
+            <string>Save</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
     </widget>
-   </widget>
-  </item>
- </layout>
-</widget>
-<resources/>
-<connections>
- <connection>
-  <sender>clearPushButton</sender>
-  <signal>clicked()</signal>
-  <receiver>messageTreeWidget</receiver>
-  <slot>clear()</slot>
-  <hints>
-   <hint type="sourcelabel">
-    <x>270</x>
-    <y>295</y>
-   </hint>
-   <hint type="destinationlabel">
-    <x>288</x>
-    <y>195</y>
-   </hint>
-  </hints>
- </connection>
-</connections>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections>
+  <connection>
+   <sender>clearPushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>messageTreeWidget</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>270</x>
+     <y>295</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>288</x>
+     <y>195</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
