--- a/QtChatProject/chatserver.ui
+++ b/QtChatProject/chatserver.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Chatting Server</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
@@ -52,11 +52,35 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="chatListLabel">
-         <property name="text">
-          <string>Chat List</string>
-         </property>
-        </widget>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLabel" name="chatListLabel">
+           <property name="text">
+            <string>Chat List</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="noticepushButton">
+           <property name="text">
+            <string>Notice Details</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
         <widget class="QTreeWidget" name="chatTreeWidget">
@@ -89,10 +113,15 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QLabel" name="label">
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Chatting Log</string>
          </property>
