--- a/QtChatProject/chatserveradmin.ui
+++ b/QtChatProject/chatserveradmin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>376</width>
+    <height>266</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>Name</string>
+          <string>Target Name</string>
          </property>
         </widget>
        </item>
@@ -44,7 +44,7 @@
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>PortNum</string>
+          <string>Target Port</string>
          </property>
         </widget>
        </item>
